# astar-algorithm

./: CMakeLists.txt  README.md  main.cpp
src/: AStarSearch.hpp  ArrayMap.hpp  ConsoleFrontend.hpp  MapSearchImpl.hpp  MapSearchNode.hpp  MapSearcher.hpp  PrettyFrontend.hpp  RandomPointGenerator.hpp  SFML_Frontend.hpp
tests/: CMakeLists.txt  tests.cpp
